# CNN_from_scratch

./: .gitignore  CMakeLists.txt  README.md  cnn.hpp  test.cpp  train.cpp  unit_tests.cpp  view.cpp
src/: cnn.hpp  mnist.hpp  train.cpp  unit_tests.cpp  view.cpp
